--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container mt-5">
       <h1 class="text-center mb-4">POSWEB 2024 - People Management System</h1>
-
+      <p>Trabalho da disciplina de infra</p>
       <!-- Form to Add or Update Person -->
       <div class="card mb-4">
         <div class="card-body">
