feat: change title

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>POSWEB 2024 - People Management System</title>
+    <title>POSWEB 2024 - Gerenciamento de alunos da pós</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="container mt-5">
-      <h1 class="text-center mb-4">POSWEB 2024 - People Management System</h1>
+      <h1 class="text-center mb-4">POSWEB 2024 - Gerenciamento de alunos da pós</h1>
       <p>Trabalho da disciplina de infra</p>
       <!-- Form to Add or Update Person -->
       <div class="card mb-4">
@@ -19,7 +19,7 @@
           <form id="personForm">
             <input type="hidden" id="personId" />
             <div class="mb-3">
-              <label for="name" class="form-label">Name</label>
+              <label for="name" class="form-label">Nome</label>
               <input
                 type="text"
                 class="form-control"
