feat: change name field

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,7 +29,7 @@
               />
             </div>
             <div class="mb-3">
-              <label for="age" class="form-label">Age</label>
+              <label for="age" class="form-label">Idade</label>
               <input
                 type="number"
                 class="form-control"
