feat: change title

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="container mt-5">
-      <h1 class="text-center mb-4">POSWEB 2024 - Gerenciamento de alunos da pós</h1>
+      <h1 class="text-center mb-4">POSWEB 2024 - Gerenciamento de alunos da pós :)</h1>
       <p>Trabalho da disciplina de infra</p>
       <!-- Form to Add or Update Person -->
       <div class="card mb-4">
@@ -39,7 +39,7 @@
               />
             </div>
             <div class="mb-3">
-              <label for="cell_phone" class="form-label">Cell Phone</label>
+              <label for="cell_phone" class="form-label">Telefone</label>
               <input
                 type="text"
                 class="form-control"
